--- a/shop/templates/shop/detail.html
+++ b/shop/templates/shop/detail.html
@@ -2,11 +2,13 @@
 {% block content %}
 
 <div class="container mx-auto">
-    <a href="/shop/" class="pb-16">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="ml-32 w-7 h-7">
+    <div>
+    <a href="/shop/" class="pb-1">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-7 h-7">
             <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
         </svg>
     </a>
+</div>
     <div class="flex flex-col md:flex-row justify-center  md:justify-around mt-10 mb-40">
         <div>
             <img class="max-w-80 md:max-w-md" id="image_product" src="{{product_object.image}}" alt="product"/>
